# lpc55s69

./: .Jenkinsfile  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO.md  uncrustify_c.cfg  uncrustify_objc.cfg
boards/gaia300d/: board.c  board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
boards/lpcxpresso55s69/: board.c  board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
boards/zeus300s/: CMakeLists.txt  board.c  board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
docs/: state-machine.pu
include/: bootloader.h  bootloader_spi.h  comm_driver.h  comm_parser.h  comm_protocol.h  crc.h  is25xp.h  lpc55s69_irqs.h  memory_map.h  si5341.h  si5341_regmap.h  state_machine.h  storage.h  storage_flash.h  storage_spi_flash.h  tmds181.h  tmds181_regmap.h  usb5807c.h  usb5807c_regmap.h  usb7206c.h
s300-scripts/: .clang-format  .gitignore  README.md  build.sh  format.sh  test.sh
scripts/: build_all.sh  build_lpcxpresso.sh  build_zeus300s.sh  gen_version.sh  process_memlog.go  run_format.sh  run_jlink.sh  summerizeMD
src/application/: CMakeLists.txt  README.md  data_map.c  data_map.h  flash_helper.c  flash_helper.h  logger_conf.c  main.c  softversions.h  spi_flash_helper.c  spi_flash_helper.h  startup.c
src/application/comm/: comm.c  comm.h  gowin_protocol.c  gowin_protocol.h  protocol.c  protocol.h
src/application/i2c/: i2c_master.c  i2c_master.h  i2c_slave.c  i2c_slave.h
src/application/run/: comm_run.c  comm_run.h
src/application/spi/: spiFlashBitFile.sh  spi_master.c  spi_master.h
src/bootloader/: CMakeLists.txt  README.md  bootloader_helpers.c  bootloader_helpers.h  bootloader_spi_helpers.c  bootloader_spi_helpers.h  bootloader_usb_helpers.c  bootloader_usb_helpers.h  logger_conf.c  main.c  startup.c
src/drivers/: CMakeLists.txt
src/drivers/devices/: README.md  is25xp.c  memory_map.c  si5341.c  tmds181.c  usb5807c.c  usb7206c.c
src/drivers/interfaces/: commp.c  commp_cmd_helpers.c  commp_opcode_helpers.c  commp_parser.c  commp_uart.c  crc.c  logger_mem.c  logger_uart.c  storage_flash.c  storage_spi_flash.c
src/tools/: CMakeLists.txt  README.md  comm_i2c_gpmcu.c  comm_i2c_gpmcu.h  comm_serial.c  comm_udp.c  crc.c  crc_linux.h  flash_tool.c  logger_conf.c  socket.c  socket.h
tests/native/: CMakeLists.txt
tests/native/application/: CMakeLists.txt  README.md  unit_test_comm_protocol.c  unit_test_comm_protocol_array.c  unit_test_comm_protocol_bootcode.c  unit_test_comm_protocol_helper.c  unit_test_comm_protocol_helper.h  unit_test_comm_protocol_mock.c  unit_test_comm_protocol_mock.h  unit_test_gowin_protocol.c  unit_test_gowin_protocol_byte.c  unit_test_gowin_protocol_mock.c  unit_test_gowin_protocol_queue.c
tests/native/comm/: CMakeLists.txt  comm_tcp.c  comm_test.c  comm_unit.c  socket.c  socket.h  storage_linux.h  storage_linux_file.c  unit_test_comm.c
